fixed spacing between units and added background images

--- a/src/styles/ForecastSummaries.css
+++ b/src/styles/ForecastSummaries.css
@@ -1,6 +1,6 @@
 .forecast-summaries {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
   margin-inline: 30px;
 }
