--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -1,10 +1,8 @@
 .forecast-summary {
 font-size: 25px;
-padding:8px;
-border-inline-end: solid rgba(0, 0, 0, 0.242) 2px ;
-}
-.forecast-summary:last-of-type {
-border: 0px;
+padding:15px;
+border-inline: solid rgba(184, 180, 180, 0.523) 2px ;
+border-radius: 10px;
 }
 
 .forecast-summary__icon > i {
