--- a/src/styles/LocationDetails.css
+++ b/src/styles/LocationDetails.css
@@ -1,5 +1,5 @@
 h1 {
 font-weight: 800;
-font-size: 35px;
+font-size: 40px;
 padding-block-end: 30px;
 }
